--- a/templates/faq.html
+++ b/templates/faq.html
@@ -316,12 +316,20 @@
         and then on button "Reviewer Recruitment by AE".</span></p>
 <p><span class="italic">Q: Can I invite someone to review a specific submission I'm in charge of,
         without them joining TMLR's general pool of reviewers?</span></p>
-<p><span>A: Yes, simply ask them to visit the submission's OpenReview page, where they can request to
+<p><span>A: Yes. There are two ways to do this. One is to simply ask that person to visit the submission's OpenReview page, where they can request to
         review the submission by clicking on button "Volunteer to Review". You'll then receive a notification asking you to
         accept
-        their request. Once you do, they will become an official reviewer for that submission.</span></p>
+        their request. Once you do, they will become an official reviewer for that submission.<br><br>
+        The other approach is to search for the person's name on the submission's reviewer assignment page and, if you don't find them, 
+        to use the dedicated text box below (which appears when no reviewer with a searched name is found) to enter that person's email 
+        and send them an invitation. Assuming the candidate reviewer doesn't have a 
+        conflict with the authors of the submission, then they'll be able to accept the assignment, while not joining the regular pool 
+        of TMLR reviewers.</span></p>
 <p><span class="italic">Q: I'm in charge of a resubmission that I previously rejected, with encouragement to resubmit. I'd like to assign the same reviewers I used in the first round of reviews. Can I do that?</span></p>
-<p><span>A: Yes. If the reviewers in question are currently available (e.g. they don't have a pending review for another submission), go ahead and assign them as you would normally. However, if the reviewers aren't available, consider reaching out by email directly to them, asking them if they could still take on the review assignment. If they agree, then ask them to click on the "Volunteer to Review" button on the OpenReview page of the submission.</span></p>
+<p><span>A: Yes. If the reviewers in question are currently available (e.g. they don't have a pending review for another submission), 
+            go ahead and assign them as you would normally. However, if the reviewers aren't available, consider reaching out by
+            email directly to them, asking them if they could still take on the review assignment. If they agree, then ask 
+            them to click on the "Volunteer to Review" button on the OpenReview page of the submission. </span></p>
 <p><span class="italic">Q: I am concerned that a submission, which is otherwise acceptable, violates the TMLR
         ethical guidelines; how should I handle this?</span></p>
 <p><span>A: Consider whether the submission would be acceptable if the authors added or
