--- a/templates/editorial-board.html
+++ b/templates/editorial-board.html
@@ -43,9 +43,14 @@ $(document).ready(function(){
     <h3>Editors-in-Chief</h3>
     <ul class="editors">
       <li><a class="name" href="http://kyunghyuncho.me">Kyunghyun Cho</a>, Genentech and New York University.</li>
-      <li><a class="name" href="http://raiahadsell.com">Raia Hadsell</a>, Google DeepMind.</li>
       <li><a class="name" href="http://www.gautamkamath.com/">Gautam Kamath</a>, University of Waterloo.</li>
       <li><a class="name" href="https://mila.quebec/en/person/hugo-larochelle/">Hugo Larochelle</a>, Mila and Google DeepMind.</li>
+      <li><a class="name" href="https://openreview.net/profile?id=~Naila_Murray1">Naila Murray</a>, Meta AI.</li>
+    </ul>
+
+    <h3>Past Editors-in-Chief</h3>
+    <ul class="editors">
+      <li><a class="name" href="http://raiahadsell.com">Raia Hadsell</a>, Google DeepMind.</li>
     </ul>
 
     <!-- <ul class="editors">{% for e in editors_in_chief %}
