--- a/templates/reviewer-guide.html
+++ b/templates/reviewer-guide.html
@@ -26,7 +26,7 @@
 <p>
     <b>Annual Quota.</b>
     Reviews are assigned on a rolling basis, as submissions are received. By default, TMLR will not assign you more than six reviews per year. The default quota is 6 papers per year, but it is possible to change it <a href="https://jmlr.org/tmlr/faq.html#reviewer-quota">through the openreview console</a>, as well as to mark yourself temporarily unavailable for periods such as illness, vacation or work leave.
-    On the other hand, you are expected to accept all requests for review of submissions that fall within your expertise and quota. Acceptable exceptions include having an unsubmitted review for another TMLR submission.
+    On the other hand, you are expected to perform all review assignments of submissions that fall within your expertise and quota. Acceptable exceptions include having an unsubmitted review for another TMLR submission. A couple days after being assigned to review a submission, you will be asked by OpenReview to acknowledge the review assignment, so that the Action Editor has a confirmation that you are aware of the assignment and will be submitting it in time.
 </p>
 
 <p>
