--- a/templates/news/index.html
+++ b/templates/news/index.html
@@ -5,6 +5,7 @@
 <h1>TMLR News</h1>
 
 <ul>
+  <li><i>2024.02.16</i>: <a href="https://docs.google.com/document/d/13mknNOEvwkibxxrES-RrvgbWIuXY6u0PpMjnMrvp6h0/">2023 Annual report released</a></li>
   <li><i>2024.01.12</i>: Naila Murray joins the TMLR Editors-in-Chief, replacing outgoing Editor-in-Chief Raia Hadsell. Thanks to Raia for her valuable service!</li>
   <li><i>2023.10.18</i>: <a href="https://reproml.org/blog/announcing_mlrc2023/">TMLR partners with the 2023 Machine Learning Reproducibility Challenge</a>.</li>
   <li><i>2023.10.07</i>: <a href="https://blog.iclr.cc/2023/10/06/authors-of-tmlr-publications-with-featured-and-outstanding-certifications-at-iclr-2024/">ICLR 2024 invites authors of TMLR papers with Featured or Outstanding Certifications to present</a></li>
