remove uses ul classes

--- a/templates/editorial-policies.html
+++ b/templates/editorial-policies.html
@@ -10,7 +10,7 @@
     <p></p>
     <p><span class="c1">To this end, TMLR invites authors to submit papers that contain </span></p>
     <p></p>
-    <ul class="c9 lst-kix_vf4oxdz0iwp4-0 start">
+    <ul class="c9 start">
         <li><span class="c1">new algorithms with sound empirical validation, optionally with
                 justification of theoretical, psychological, or biological nature;</span></li>
         <li><span class="c1">experimental and/or theoretical studies yielding new insight into
@@ -48,7 +48,7 @@
             invited reviewers are withheld. Reviewers are expected not to take any actions that would violate this double blind state, e.g. searching for related presentations or arXiv preprints.</span></p>
     <p></p>
     <p><span class="c1">The review process can be summarized in the following four phases:</span></p>
-    <ol class="c9 lst-kix_knagtdofk76a-0 start" start="1">
+    <ol class="c9 start" start="1">
         <li><span class="bold">Submission</span><span class="bold">. </span><span>The manuscript
                 is submitted</span><span>&nbsp;to </span><span class="c11"><a class="c2"
                     href="https://openreview.net/group?id=TMLR">OpenReview</a></span><span class="c1">&nbsp;in anonymized form, and the authors
@@ -70,7 +70,7 @@
                 at least two weeks have elapsed after all 3 reviews became public.</span></li>
         <li><span class="bold">Decision. </span><span class="c1">The discussion period ends when
                 the action editor enters a decision for the paper, which is one of the following: <br></span>
-    <ul class="c9 lst-kix_knagtdofk76a-1 start">
+    <ul class="c9 start">
         <li class="c0 c13 li-bullet-0"><span class="bold">Accept as is:</span><span class="c1">&nbsp;the author is
                 notified, and, once the camera ready version is submitted and verified, the manuscript is published.
             </span></li>
