Added text for Scopus indexing.

--- a/templates/author-guide.html
+++ b/templates/author-guide.html
@@ -41,5 +41,10 @@
             supplementary material must be anonymized. Looking at supplementary material is at the discretion of the
             reviewers.</span></p>
 
+    <p class="c0"><span class="c3">We encourage authors to, whenever possible, upload materials that improve reproducibility. Specifically, it is suggested that authors submit supplementary material including data or code towards this end.</span></p>
+
+
+<h2 class="c5"><span>Copyright and Licensing</span></h2>
+<p class="c0"><span>All TMLR submissions, from the time of submission to final publication, are licensed under <a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a>. At all times, copyright is retained by the authors. Authors are also allowed to upload their submissions to arXiv or other preprint servers at any time, either anonymously or including their identity, though double blind of the TMLR submission itself must be maintained by not linking to another version that includes the authors' names.</span></p>
 
 {% endblock %}
