--- a/templates/contact.html
+++ b/templates/contact.html
@@ -17,8 +17,7 @@
     <p class="c3"><span>If you found issues on the TMLR website (jmlr.org/tmlr), such as typos or broken links, please
             report them to the <a href="https://github.com/JmlrOrg/tmlr/issues">github issue tracker</a>.</p>
     <p class="c3 c5"><span class="c0"></span></p>
-    <p class="c3"><span>For any other issues, please contact our editors-in-chief (Hugo Larochelle, Kyunghyun Cho, and
-            Raia Hadsell) by emailing <a href="mailto:tmlr-editors@jmlr.org">tmlr-editors@jmlr.org</a>.</span></p>
+    <p class="c3"><span>For any other issues, please contact our editors-in-chief (Kyunghyun Cho, Gautam Kamath, Hugo Larochelle, and Naila Murray) by emailing <a href="mailto:tmlr-editors@jmlr.org">tmlr-editors@jmlr.org</a>.</span></p>
 
 
     <h1>Communication</h1>
@@ -55,7 +54,9 @@
             </ul>
     </p>
 
-<h3> Address</h3>
-TMLR is located at 60 5th Ave, New York, NY 10011
+<h1> Organization</h1>
+<p>TMLR is a part of Journal of Machine Learning Research Inc., which also operates publications including <a href="https://jmlr.org/">Journal of Machine Learning Research</a> (JMLR), <a href="https://proceedings.mlr.press/">Proceeding of Machine Learning Research</a> (PMLR), and <a href="https://data.mlr.press/">Data-Centric Machine Learning Research</a> (DMLR).</p>
+
+<p>TMLR is located at 60 5th Ave, New York, NY 10011. TMLR is an entirely volunteer-run organization.</p>
 
 {% endblock %}
