--- a/templates/editorial-policies.html
+++ b/templates/editorial-policies.html
@@ -209,6 +209,22 @@
             editor(s)-in-chief will choose an action editor that is not in conflict with any of the editors-in-chief to
             oversee the review. If a TMLR action editor submits a paper, it will be assigned to a different,
             non-conflicting action editor to oversee the review. </span></p>
+    <h2><span class="c5">Criteria for Authorship</span></h2>
+    <p><span class="c1">Individuals should be listed as authors on a TMLR submission if and only if they satisfy all of the following criteria:</span></p>
+    <ul class="c9 start">
+        <li><span class="c1">They have made a substantial intellectual contribution to the work described in the submission. This may include, but is not limited to: conception, design, or analysis of the work.</span></li>
+        <li><span class="c1">They have contributed to drafting or revising the submission.</span></li>
+        <li><span class="c1">They take full responsibility for all content in the final published work.</span></li>
+    </ul>
+    <p><span>Furthermore, individuals listed as authors on a TMLR submission testify that:</span></p>
+    <ul class="c9 start">
+        <li><span class="c1">They are aware the submission has been submitted to TMLR.</span></li>
+        <li><span class="c1">They agree to be held responsible and accountable for issues related to correctness or integrity of the work.</span></li>
+        <li><span class="c1">To the best of their knowledge, the work submitted is original, all individuals who satisfy the authorship criteria outlined above are listed as authors, and the submission is an honest representation of the underlying work.</span></li>
+    </ul>
+    <p><span class="c1">All authors must be listed on OpenReview at the time of submission, and may only be added later under exceptional circumstances at the discretion of the Editors-in-Chief.</span></p>
+    <p><span class="c1">TMLR gives no prescription on how to order authors, and this may be decided by the authors themselves in accordance with the customs of the subcommunity the work contributes to (e.g., alphabetically, in order of contribution, etc.). Authors may choose to include a statement indicating author contributions.</span></p>
+    <p><span class="c1">Some parts of this policy are adapted from similar policies of <a href="https://www.acm.org/publications/policies/new-acm-policy-on-authorship">ACM</a> and <a href="https://journals.ieeeauthorcenter.ieee.org/become-an-ieee-journal-author/publishing-ethics/ethical-requirements/">IEEE</a>.</span></p>
     <h2><span class="c5">Ethical publishing</span></h2>
     <p><span class="c1">Allegations of author, reviewer, or editor misconduct should be sent to the
             editors-in-chief, except that if the allegations concern an EiC, the allegations may be sent directly to the
@@ -219,42 +235,26 @@
             misconduct may result in TMLR contacting the author institutions, funding agencies, and/or potential
             victims.</span></p>
     <p></p>
-    <p><span class="c10 c8">Plagiarism or redundant (duplicate) publication:</span></p>
+    <p><span class="bold">Intellectual property, including plagiarism or redundant (duplicate) publication:</span></p>
     <ul class="c9 lst-kix_5zxkbiqp0udh-0 start">
-        <li><span class="c1">COPE Council. Suspected plagiarism in a submitted manuscript.
-                &nbsp;Version 2, November 2018. &nbsp;<a href="https://doi.org/10.24318/cope.2019.2.1">https://doi.org/10.24318/cope.2019.2.1</a>, flowchart
-                <a href="https://publicationethics.org/files/plagiarism%20A.pdf">https://publicationethics.org/files/plagiarism%20A.pdf</a></span></li>
-        <li><span class="c1">COPE Council. Suspected plagiarism in a published manuscript.
-                Version 2. 2013. &nbsp;<a href="https://doi.org/10.24318/cope.2019.2.2">https://doi.org/10.24318/cope.2019.2.2</a>, flowchart
-               <a href="https://publicationethics.org/files/plagiarism%20B.pdf">https://publicationethics.org/files/plagiarism%20B.pdf</a></span></li>
-        <li><span class="c1">COPE Council. Suspected redundant publication in a submitted
-                manuscript. Version 2. 2015. <a href="https://doi.org/10.24318/cope.2019.2.12">https://doi.org/10.24318/cope.2019.2.12</a>, flowchart
-               <a href="https://publicationethics.org/files/redundant%20publication%20A_0.pdf">https://publicationethics.org/files/redundant%20publication%20A_0.pdf</a> &nbsp;</span></li>
-        <li><span class="c1">COPE Council. Suspected redundant publication in a published
-                manuscript. Version 2. 2015. &nbsp;<a href="https://doi.org/10.24318/cope.2019.2.13">https://doi.org/10.24318/cope.2019.2.13</a>, flowchart
-                <a href="https://publicationethics.org/files/redundant%20publication%20B.pdf">https://publicationethics.org/files/redundant%20publication%20B.pdf</a></span></li>
+      <li><span class="c1">COPE Council. <a href="https://doi.org/10.24318/cope.2019.2.1">Suspected plagiarism in a submitted manuscript</a>.</span></li>
+      <li><span class="c1">COPE Council. <a href="https://doi.org/10.24318/cope.2019.2.2">Suspected plagiarism in a published manuscript</a>.</span></li>
+      <li><span class="c1">COPE Council. <a href="https://doi.org/10.24318/cope.2019.2.12">Suspected redundant publication in a submitted manuscript</a>.</span></li>
+      <li><span class="c1">COPE Council. <a href="https://doi.org/10.24318/cope.2019.2.13">Suspected redundant publication in a published manuscript</a>.</span></li>
     </ul>
     <p></p>
-    <p><span>Research Fraud:</span></p>
+    <p><span class="bold">Research Fraud:</span></p>
     <ul class="c9 lst-kix_iypgyd83v7ja-0 start">
-        <li><span class="c1">COPE Council. Suspected fabricated data in a submitted
-                manuscript. Version 2. 2013. <a href="https://doi.org/10.24318/cope.2019.2.3">https://doi.org/10.24318/cope.2019.2.3</a>, flowchart
-                <a href="https://publicationethics.org/files/Fabricated%20data%20A.pdf">https://publicationethics.org/files/Fabricated%20data%20A.pdf</a></span></li>
-        <li><span class="c1">COPE Council. Suspected fabricated data in a published
-                manuscript. Version 2. 2013. <a href="https://doi.org/10.24318/cope.2019.2.4">https://doi.org/10.24318/cope.2019.2.4</a>, flowchart
-                <a href="https://publicationethics.org/files/Fabricated%20data%20B.pdf">https://publicationethics.org/files/Fabricated%20data%20B.pdf</a></span></li>
+      <li><span class="c1">COPE Council.  <a href="https://doi.org/10.24318/cope.2019.2.3">Suspected fabricated data in a submitted manuscript</a>.</span></li>
+      <li><span class="c1">COPE Council. <a href="https://doi.org/10.24318/cope.2019.2.4">Suspected fabricated data in a published manuscript</a>.</span></li>
     </ul>
     <p></p>
     <p><span class="bold">Reviewer or editor misconduct during the review process: &nbsp;</span></p>
     <ul>
-        <li><span class="c1">COPE Council. What to do if you [an author] suspect a reviewer
-                has appropriated a submission&rsquo;s idea or data.[4] Version 2. 2013.
-                <a href="https://doi.org/10.24318/cope.2019.2.5">https://doi.org/10.24318/cope.2019.2.5</a>, flowchart:
-               <a href="https://publicationethics.org/files/Appropriated.pdf">https://publicationethics.org/files/Appropriated.pdf</a></span></li>
+      <li><span class="c1">COPE Council. <a href="https://doi.org/10.24318/cope.2019.2.5">Reviewer suspected to have appropriated an author’s ideas or data</a>.</span></li>
     </ul>
     <p></p>
-    <p><span class="c1">TMLR follows the guidelines for retracting articles by COPE Council,
-            &nbsp;<a href="https://doi.org/10.24318/cope.2019.1.4">https://doi.org/10.24318/cope.2019.1.4</a> (version 1, dated September 2009). In the event that TMLR
+    <p><span class="c1">TMLR follows the <a href="https://doi.org/10.24318/cope.2019.1.4">guidelines for retracting articles</a> by COPE Council. In the event that TMLR
             retracts a publication because evidence shows that the findings are unreliable, either because of misconduct
             or honest error, or that the findings have been plagiarized or previously published, or that the research is
             unethical), a Notice of Retraction will be attached to the paper on OpenReview.</span></p>
