--- a/templates/faq.html
+++ b/templates/faq.html
@@ -87,6 +87,13 @@
     that if a submission
     has more than 12 pages of main content, then TMLR's normal short review timeline will not be enforced.
 </p>
+<p><span class="italic">Q: How are submissions stored?</p>
+<p>
+A: All submitted papers, including those accepted, rejected, withdrawn, or retracted, are made publicly accessible on OpenReview.  An exception is made for desk-rejected papers, which are never made public. OpenReview intends to archive all submissions by keeping them publicly accessible indefinitely.</p>
+<p><span class="italic">Q: How often is TMLR published?</p>
+<p>
+A: TMLR is a continuous publication, and every paper is immediately published upon completion of the review process, including submission of the camera-ready version of the paper and its verification by the assigned action editor.
+</p>
 <p><span class="italic">Q: Does TMLR have a <a
             href="https://en.wikipedia.org/wiki/International_Standard_Serial_Number">ISSN code</a>?
 </p>
@@ -128,8 +135,7 @@
 </p>
 
 <p>
-    A: Authors cannot make changes to their previously submitted camera ready paper. To request a change, send an email
-    to the Editors-in-Chief at tmlr-editors@jmlr.org.
+        A: In general, camera ready versions of papers are considered to be final, and changes are not allowed. In exceptional cases, post-publication modifications may be considered at the discretion of the Editors-in-Chief. To request a change, send an email to tmlr-editors@jmlr.org.
 </p>
 
 
