Adjusting AE guidelines to mention that AE identity is now known to authors at the desk rejection phase (instead of after)

--- a/templates/ae-guide.html
+++ b/templates/ae-guide.html
@@ -30,9 +30,9 @@
         class="c4">&nbsp;with work already published in proceedings (or currently under review for publication). If
         you suspect but are unsure about whether a submission might need to be desk rejected for any other reasons
         (e.g. lack of fit with the scope of TMLR or lack of technical depth), simply reach out to the Editors in
-        Chief. </span><span>&nbsp;<br><br></span><span>Once you've confirmed that a submission is appropriate for TMLR, 
-        the submission becomes public and <b>your identity as the AE responsible for the submission is revealed on 
-        OpenReview</b>.</span></p>
+        Chief. Note that your identity as the AE responsible for the submission is known to the authors at that stage.
+        <br><br></span><span>Once you've confirmed that a submission is appropriate for TMLR, 
+        the submission becomes public.</span></p>
 <p class="c0"><span class="c4"></span></p>
 <p class="c9"><span class="bold">Assignment</span><span class="bold">&nbsp;of reviewers</span><span>&nbsp; Once
         confirmed that a submission is appropriate for TMLR, you should assign it for review to at
