--- a/templates/expert-reviewers.html
+++ b/templates/expert-reviewers.html
@@ -39,7 +39,7 @@ $(document).ready(function(){
 {% endblock %}
 
 {% block content %}
-<h1>TMLR Expert Reviewers 2024</h1>
+<h1>TMLR Expert Reviewers</h1>
 
   <h2>2024</h2>
 
