--- a/templates/news/index.html
+++ b/templates/news/index.html
@@ -5,6 +5,7 @@
 <h1>TMLR News</h1>
 
 <ul>
+  <li><i>2025.01.02</i>: We are happy to welcome Nihar Shah to the TMLR Editors-in-Chief, while we bade farewell to Kyunghyun Cho. Sincere gratitude to Kyunghyun for his pivotal role in TMLR!</li>
   <li><i>2024.12.19</i>: <a href="https://medium.com/@TmlrOrg/announcing-the-2024-tmlr-outstanding-certification-65f25d05c37c">The 2024 TMLR Outstanding Certifications</a></li>
   <li><i>2024.11.26</i>: TMLR will pause new submissions over the upcoming holiday period from December 2 2024 to January 6 2025 (midnight AOE on both dates). We will resume accepting new submissions on January 7, 2025. Happy Holidays!</li>
   <li><i>2024.02.16</i>: <a href="https://docs.google.com/document/d/13mknNOEvwkibxxrES-RrvgbWIuXY6u0PpMjnMrvp6h0/">2023 Annual report released</a></li>
