--- a/templates/index.html
+++ b/templates/index.html
@@ -60,36 +60,34 @@ We use the reviewing and publication systems on <a href="https://openreview.net/
 
 <h2>Advisory Board Members</h2>
 
-<p>TMLR&rsquo;s founding advisory board consists of nine experts who have
+<p>TMLR&rsquo;s advisory board consists of nine experts who have
         extensive experience in creating, maintaining and improving academic publication venues, conferences and
         workshops in machine learning, artificial intelligence, and adjacent areas.</p>
 <p><a class="c1"
-            href="https://www.google.com/url?q=https://yoshuabengio.org&amp;sa=D&amp;source=editors&amp;ust=1638370889694000&amp;usg=AOvVaw2dvEXQpnMnw5ct-DJ5MkS7">Yoshua
-            Bengio</a>: Mila.</p>
+            href="https://kyunghyuncho.me/">Kyunghyun Cho</a>: Prescient Design and New York University.</p>
 <p><a class="c1"
-            href="https://www.google.com/url?q=https://people.cs.umass.edu/~mccallum/&amp;sa=D&amp;source=editors&amp;ust=1638370889695000&amp;usg=AOvVaw1TMy4iBxi8y-_oqbMUPFA6">Andrew
-            McCallum</a>: University of Massachusetts, Amherst.</p>
+            href="https://www.google.com/url?q=https://www.andrew.cmu.edu/user/achoulde/&amp;sa=D&amp;source=editors&amp;ust=1638370889699000&amp;usg=AOvVaw2YWbbumRXK0p2uE3K6flL-">Alexandra
+            Chouldechova</a>: Microsoft Research and Carnegie Mellon University.</p>
 <p><a class="c1"
-            href="https://www.google.com/url?q=https://scholar.google.com/citations?user%3DcIlDEugAAAAJ%26hl%3Den&amp;sa=D&amp;source=editors&amp;ust=1638370889695000&amp;usg=AOvVaw0wAW2bpdQq4RClN1UiPhSU">Shakir
-            Mohamed</a>: DeepMind.</p>
-<p><a class="c1"
-            href="https://www.google.com/url?q=https://www.is.mpg.de/~bs&amp;sa=D&amp;source=editors&amp;ust=1638370889696000&amp;usg=AOvVaw009dr48vTYCKOTd3X9eA_j">Bernhard
-            Schölkopf</a>: Max Planck Institute for Intelligent Systems.</p>
-<p><a class="c1"
-            href="https://www.google.com/url?q=https://natschluter.github.io&amp;sa=D&amp;source=editors&amp;ust=1638370889696000&amp;usg=AOvVaw3TXm64gg4OcsLzTpXuyudn">Natalie
-            Schluter</a>: IT University, Copenhagen.</p>
-<p><a class="c1"
-            href="https://www.google.com/url?q=http://koerding.com&amp;sa=D&amp;source=editors&amp;ust=1638370889697000&amp;usg=AOvVaw3S5IkA1Md582gH0RFo3IIC">Konrad
-            Körding</a>: University of Pennsylvania.</p>
+            href="https://raiahadsell.com/index.html">Raia Hadsell</a>: Google DeepMind.</p>
 <p><a class="c1"
             href="https://www.google.com/url?q=https://www.cs.cornell.edu/home/llee/&amp;sa=D&amp;source=editors&amp;ust=1638370889698000&amp;usg=AOvVaw1sHcITy7nK-iJHzetG-P9J">Lillian
             Lee</a>: Cornell University.</p>
 <p><a class="c1"
-            href="https://www.google.com/url?q=https://www.cc.gatech.edu/~parikh/&amp;sa=D&amp;source=editors&amp;ust=1638370889698000&amp;usg=AOvVaw1dCqMDCS0CN5pkrKE3fzGa">Devi
-            Parikh</a>: Facebook and Georgia Tech.</p>
+            href="https://www.google.com/url?q=https://people.cs.umass.edu/~mccallum/&amp;sa=D&amp;source=editors&amp;ust=1638370889695000&amp;usg=AOvVaw1TMy4iBxi8y-_oqbMUPFA6">Andrew
+            McCallum</a>: Google and University of Massachusetts, Amherst.</p>
 <p><a class="c1"
-            href="https://www.google.com/url?q=https://www.andrew.cmu.edu/user/achoulde/&amp;sa=D&amp;source=editors&amp;ust=1638370889699000&amp;usg=AOvVaw2YWbbumRXK0p2uE3K6flL-">Alexandra
-            Chouldechova</a>: Carnegie Mellon University.</p>
+            href="https://www.google.com/url?q=https://scholar.google.com/citations?user%3DcIlDEugAAAAJ%26hl%3Den&amp;sa=D&amp;source=editors&amp;ust=1638370889695000&amp;usg=AOvVaw0wAW2bpdQq4RClN1UiPhSU">Shakir
+            Mohamed</a>: Google DeepMind.</p>
+<p><a class="c1"
+            href="https://www.google.com/url?q=https://natschluter.github.io&amp;sa=D&amp;source=editors&amp;ust=1638370889696000&amp;usg=AOvVaw3TXm64gg4OcsLzTpXuyudn">Natalie
+            Schluter</a>: Apple and IT University, Copenhagen.</p>
+<p><a class="c1"
+            href="https://www.google.com/url?q=https://www.is.mpg.de/~bs&amp;sa=D&amp;source=editors&amp;ust=1638370889696000&amp;usg=AOvVaw009dr48vTYCKOTd3X9eA_j">Bernhard
+            Schölkopf</a>: Max Planck Institute for Intelligent Systems.</p>
+<p><a class="c1"
+            href="https://www.google.com/url?q=https://www.cc.gatech.edu/~parikh/&amp;sa=D&amp;source=editors&amp;ust=1638370889698000&amp;usg=AOvVaw1dCqMDCS0CN5pkrKE3fzGa">Devi
+            Parikh</a>.</p>
 
 <h2><span class="c5">Sponsors</h2>
 <p>TMLR is supported by our generous sponsors:</p>
