--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@ div, iframe {
 <h2>News</h2>
 
 <ul>
-  <li><i>2024.02.16</i>: <a href="https://docs.google.com/document/d/1_lUT03lHtwLKnFaN_RYjxnG8MX5DGcFAbfUQY6YxQsI">2024 Annual report released</a></li>
+  <li><i>2025.01.24</i>: <a href="https://docs.google.com/document/d/1_lUT03lHtwLKnFaN_RYjxnG8MX5DGcFAbfUQY6YxQsI">2024 Annual report released</a></li>
   <li><i>2025.01.02</i>: We are happy to welcome Nihar Shah to the TMLR Editors-in-Chief, while we bade farewell to Kyunghyun Cho. Sincere gratitude to Kyunghyun for his pivotal role in TMLR!</li>
   <li><i>2024.12.19</i>: <a href="https://medium.com/@TmlrOrg/announcing-the-2024-tmlr-outstanding-certification-65f25d05c37c">The 2024 TMLR Outstanding Certifications</a></li>
   <li><i>2024.11.26</i>: TMLR will pause new submissions over the upcoming holiday period from December 2 2024 to January 6 2025 (midnight AOE on both dates). We will resume accepting new submissions on January 7, 2025. Happy Holidays!</li>
@@ -88,7 +88,7 @@ We use the reviewing and publication systems on <a href="https://openreview.net/
             Schölkopf</a>: Max Planck Institute for Intelligent Systems.</p>
 <p><a class="c1"
             href="https://www.google.com/url?q=https://www.cc.gatech.edu/~parikh/&amp;sa=D&amp;source=editors&amp;ust=1638370889698000&amp;usg=AOvVaw1dCqMDCS0CN5pkrKE3fzGa">Devi
-            Parikh</a>.</p>
+            Parikh</a>: Yutori.</p>
 
 <h2><span class="c5">Sponsors</h2>
 <p>TMLR is supported by our generous sponsors:</p>
