--- a/templates/editorial-board.html
+++ b/templates/editorial-board.html
@@ -12,8 +12,11 @@ $(document).ready(function(){
 </script>
 
 <style>
+    h3 {
+        margin-top: 30px;
+    }
     .editors li {
-        margin-bottom: 20px;
+        margin-bottom: 15px;
     }
     .editors .name {
         font-weight: bold;
@@ -30,10 +33,10 @@ $(document).ready(function(){
     #board a {
       font-weight: bold;
     }
-    #board li{
+    #board li {
       list-style-type: none;
       margin-left: 2em;
-      margin-bottom: 0.5em;
+      margin-bottom: 0.4em;
     }
     </style>
 {% endblock %}
