--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,9 @@ div, iframe {
     border-style:none;
 }
 
+h2 {
+    margin-top: 40px;
+}
 </style>
 {% endblock %}
 
@@ -44,7 +47,6 @@ div, iframe {
 </ul>
 
 <h2>Editors-in-Chief</h2>
-
 
 <p>
 Editors-in-Chief of TMLR are <a href="https://mila.quebec/en/person/hugo-larochelle/">Hugo Larochelle</a> (Google DeepMind, Mila), <a href="https://scholar.google.fr/citations?user=suSmYHoAAAAJ&hl=en">Naila Murray</a> (Meta), <a href="http://www.gautamkamath.com/">Gautam Kamath</a> (University of Waterloo), and <a href="https://www.cs.cmu.edu/~nihars/">Nihar B. Shah</a> (CMU). Founding Editors-in-Chief include Hugo, <a href="https://kyunghyuncho.me/">Kyunghyun Cho</a>, and <a href="https://raiahadsell.com/index.html">Raia Hadsell</a>. TMLR's Managing Editor is <a href="https://www.paulvicol.com/">Paul Vicol</a> (Google DeepMind), who succedes the founding Managing Editor <a href="http://fa.bianp.net">Fabian Pedregosa</a> (Google DeepMind). The goal of TMLR and the Editors-in-Chief is to support the evolving needs of the machine learning community. We welcome your feedback and comments via e-mail: <a href="mailto:tmlr@jmlr.org">tmlr@jmlr.org</a>.
