Added link to the TMLR Infinite Conference.

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,6 +27,10 @@ h2 {
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Uc1r1LfJtds" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
+<h2>Videos</h2>
+
+TMLR papers can also have videos, check out the papers with videos at the <a href="https://tmlr.infinite-conf.org/index.html">TMLR Infinite Conference</a>.
+
 
 <h2>News</h2>
 
