--- a/templates/editorial-board.html
+++ b/templates/editorial-board.html
@@ -46,7 +46,7 @@ $(document).ready(function(){
     <h3>Editors-in-Chief</h3>
     <ul class="editors">
       <li><a class="name" href="http://www.gautamkamath.com/">Gautam Kamath</a>, University of Waterloo.</li>
-      <li><a class="name" href="https://mila.quebec/en/person/hugo-larochelle/">Hugo Larochelle</a>, Mila and Google DeepMind.</li>
+      <li><a class="name" href="https://mila.quebec/en/person/hugo-larochelle/">Hugo Larochelle</a>, Mila.</li>
       <li><a class="name" href="https://openreview.net/profile?id=~Naila_Murray1">Naila Murray</a>, Meta AI.</li>
       <li><a class="name" href="https://www.cs.cmu.edu/~nihars/">Nihar B. Shah</a>, CMU.</li>
     </ul>
